--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "edms-viewer-frontend",
+  "name": "edms-media-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "bundle": "node create-bundle.js"
   },
   "dependencies": {
+    "exifreader": "^4.32.0",
     "next": "14.2.4",
     "react": "^18",
     "react-datepicker": "^8.7.0",
