--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bundle": "node create-bundle.js"
   },
   "dependencies": {
+    "docx-preview": "^0.3.7",
     "exifreader": "^4.32.0",
     "jszip": "^3.10.1",
     "next": "14.2.4",
