--- a/web.config
+++ b/web.config
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-  <system.webServer>
+  <location path="." inheritInChildApplications="false">
+    <system.webServer>
 
-    <httpProtocol>
-      <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
-        <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization" />
-      </customHeaders>
-    </httpProtocol>
+      <httpProtocol>
+        <customHeaders>
+          <add name="Access-Control-Allow-Origin" value="*" />
+          <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+          <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization" />
+        </customHeaders>
+      </httpProtocol>
 
-    <handlers>
-      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
-    </handlers>
+      <handlers>
+        <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+      </handlers>
 
-    <rewrite>
-      <rules>
-        <rule name="next-js-rule">
-          <match url="/*" />
-          <action type="Rewrite" url="server.js" />
-        </rule>
-      </rules>
-    </rewrite>
+      <rewrite>
+        <rules>
+          <rule name="next-js-rule" stopProcessing="true">
+            <match url=".*" />
+            <conditions>
+              <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+              <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+              <!-- Exclude the sub-application path explicitly as a safety measure -->
+              <add input="{REQUEST_URI}" pattern="^/PTAEDMS" negate="true" />
+            </conditions>
+            <action type="Rewrite" url="server.js" />
+          </rule>
+        </rules>
+      </rewrite>
 
-    <iisnode      
-      node_env="production"
-      nodeProcessCommandLine="C:\nodejs\node.exe"
-      loggingEnabled="true"
-      logDirectory="iisnode"
-      devErrorsEnabled="true" 
-    />
+      <iisnode      
+        node_env="production"
+        nodeProcessCommandLine="C:\nodejs\node.exe"
+        loggingEnabled="true"
+        logDirectory="iisnode"
+        devErrorsEnabled="true" 
+      />
 
-  </system.webServer>
+    </system.webServer>
+  </location>
 </configuration>
