--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "env-cmd -f .env.production next build",
     "start": "next start",
     "lint": "next lint",
     "bundle": "node create-bundle.js"
@@ -29,6 +29,7 @@
     "@types/react-select": "^5.0.0",
     "archiver": "^7.0.1",
     "autoprefixer": "^10.4.21",
+    "env-cmd": "^11.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
