--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-select": "^5.10.2",
     "react-select-async-paginate": "^0.7.11",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@tanstack/react-query": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
